# cactus-dim-solver

./: CITATION.cff  README.md  pyproject.toml  requirements.txt
dim_cactus/: __init__.py  cactus_dp.py  exact.py  formulas.py  generators.py  tree_dp.py
figures/: make_figures.py
scripts/: benchmark.py  explore_X_formula.py  reproduce_claims.py
tests/: test_algorithm.py  test_cactus_dp.py  test_counterexamples.py  test_formulas.py
